--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.0",
     "concurrently": "^8.2.0",
