--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -13,5 +13,8 @@
     "hardhat": "^2.17.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0"
   }
 }
