--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
   "dependencies": {
     "bootstrap": "^5.3.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "ethers": "^6.7.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.0",
+    "@types/passport": "^1.0.12",
+    "@types/passport-google-oauth20": "^2.0.11",
     "concurrently": "^8.2.0",
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
