--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^5.3.1",
     "dotenv": "^16.3.1",
+    "ethers": "^6.7.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
