--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/node": "^20.5.0",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
